--- a/spark/spark.env
+++ b/spark/spark.env
@@ -45,13 +45,16 @@ export SPARK_WORKER_INSTANCES=3
 #     --jars \
 #         $OPT_PATH/projects/_roo/consolidate-spark/target/scala-2.12/consolidate-spark-assembly-0.1.jar"
 
+export PATH_CONF=${PROJECTS_ROOT}/data-engineering-test/src/main/resources
+CONFIG=${PATH_CONF}/"application.conf"
 
 #scala
 alias sshell="spark-shell --master spark://${SPARK_MASTER_NAME}:${SPARK_MASTER_PORT} \
     --driver-memory 2G --executor-memory 2G --executor-cores 2 \
     --packages \
-        org.apache.spark:spark-sql-kafka-0-10_2.12:3.2.0,com.crealytics:spark-excel_2.12:3.2.0_0.16.1-pre1,io.delta:delta-core_2.12:1.1.0 \
+        org.apache.spark:spark-sql-kafka-0-10_2.12:3.2.0,com.crealytics:spark-excel_2.12:3.2.0_0.16.0,io.delta:delta-core_2.12:1.1.0,com.typesafe:config:1.4.1 \
     --jars ${APACHE_CONF}/hive/mysql-connector-java-8.0.17.jar \
+    --driver-java-options='-Dconfig.file='${CONFIG} \
     --conf 'spark.sql.extensions=io.delta.sql.DeltaSparkSessionExtension' \
     --conf 'spark.sql.catalog.spark_catalog=org.apache.spark.sql.delta.catalog.DeltaCatalog'"
 
