fix config cluster spark test develop

--- a/hive/hive.env
+++ b/hive/hive.env
@@ -1,6 +1,7 @@
 #hive-env
 # export HIVE_HOME=/usr/hdp/current/hive-client
-export HIVE_HOME=$OPT_PATH/apache-hive-3.1.2-bin
+# export HIVE_HOME=$OPT_PATH/apache-hive-3.1.2-bin
+export HIVE_HOME=$OPT_PATH/hive
 export PATH=$PATH:$HIVE_HOME/bin
 
 
