--- a/hadoop/hadoop.env
+++ b/hadoop/hadoop.env
@@ -6,7 +6,8 @@
 # . $HADOOP_HOME/sbin/start-dfs.sh
 
 #envvars
-export HADOOP_HOME=$OPT_PATH/hadoop-3.3.1
+# export HADOOP_HOME=$OPT_PATH/hadoop-3.3.1
+export HADOOP_HOME=$OPT_PATH/hadoop
 export PATH=$PATH:$HADOOP_HOME/sbin:$HADOOP_HOME/bin
 
 export HADOOP_INSTALL=$HADOOP_HOME
@@ -26,7 +27,7 @@ export HADOOP_CONF_DIR=$HADOOP_HOME/etc/hadoop
 # export HADOOP_CONF_DIR=$HADOOP_HOME/libexec/etc/hadoop
 # HADOOP_CONF_DIR=${HADOOP_HOME}/etc/hadoop
 
-# HADOOP_PREFIX=$HADOOP_INSTALL
+# export HADOOP_PREFIX=$HADOOP_HOME
 # HADOOP_YARN_HOME=$HADOOP_INSTALL
 # HADOOP_LIBEXEC_DIR=$HADOOP_CONF_DIR/libexec
 # HADOOP_COMMON_HOME=$HADOOP_INSTALL
