--- a/hbase/hbase.env
+++ b/hbase/hbase.env
@@ -1,5 +1,6 @@
 #hbase.env
-export HBASE_HOME=/opt/hbase-3.0.0-alpha-2
+# export HBASE_HOME=/opt/hbase-3.0.0-alpha-2
+export HBASE_HOME=/opt/hbase
 
 
 alias hshell="${HBASE_HOME}/bin/hbase shell"
