alter config apache spark in env develop

--- a/hive/hive.env
+++ b/hive/hive.env
@@ -4,9 +4,18 @@
 export HIVE_HOME=$OPT_PATH/hive
 export PATH=$PATH:$HIVE_HOME/bin
 
+#config
+# hive --service hiveserver2 \
+#     --hiveconf hive.server2.thrift.port=10000 \
+#     --hiveconf hive.root.logger=INFO,console \
+#     --hiveconf hive.server2.enable.doAs=false
+export HIVE_SITE_CONF_hive_server2_thrift_bind_host=0.0.0.0
+export HIVE_SITE_CONF_hive_server2_thrift_port=10000
+export HIVE_SITE_CONF_hive_metastore_event_db_notification_api_auth=false
 
-#alias
-alias bl="eval beeline -u \"jdbc:hive2://127.0.0.1:10000/default?mapred.job.queue.name=p_bigd_default \
+
+#alias  -> mapred.job.queue.name=p_bigd_default
+alias bl="eval beeline -u \"jdbc:hive2://127.0.0.1:10000/default?mapred.job.queue.name=default \
                         --hiveconf tez.queue.name=default; \
                         serviceDiscoveryMode=zooKeeper; \
                         zooKeeperNamespace=hiveserver2\""
