--- a/spark/spark.env
+++ b/spark/spark.env
@@ -4,7 +4,7 @@
 export SPARK_HOME=$OPT_PATH/spark
 export PATH=$PATH:$SPARK_HOME/bin:$SPARK_HOME/sbin
 
-# export SPARK_LOCAL_IP=127.0.0.1
+export SPARK_LOCAL_IP=127.0.0.1
 # SPARK_LOCAL_IP=192.168.99.131
 # SPARK_LOCAL_IP=localhost
 
