--- a/hadoop/hadoop.env
+++ b/hadoop/hadoop.env
@@ -5,6 +5,9 @@
 # vim $HADOOP_HOME/etc/hadoop/hadoop-env.sh
 # . $HADOOP_HOME/sbin/start-dfs.sh
 
+
+export CORE_CONF_hadoop_proxyuser_hive_hosts=*
+
 #envvars
 # export HADOOP_HOME=$OPT_PATH/hadoop-3.3.1
 export HADOOP_HOME=$OPT_PATH/hadoop
@@ -19,6 +22,7 @@ export HADOOP_HDFS_HOME=$HADOOP_HOME
 export HADOOP_COMMON_LIB_NATIVE_DIR=$HADOOP_HOME/lib/native
 
 export HADOOP_OPTS="-Djava.library.path=$HADOOP_HOME/lib/native"
+# export HADOOP_OPTS="$HADOOP_OPTS -Djava.library.path=$HADOOP_HOME/lib/native"
 # HADOOP_OPTS="-Djava.library.path=$HADOOP_INSTALL/lib"
 
 export HADOOP_CONF_DIR=$HADOOP_HOME/etc/hadoop
