--- a/hadoop/hadoop.env
+++ b/hadoop/hadoop.env
@@ -6,7 +6,7 @@
 # . $HADOOP_HOME/sbin/start-dfs.sh
 
 
-export CORE_CONF_hadoop_proxyuser_hive_hosts=*
+# export CORE_CONF_hadoop_proxyuser_hive_hosts=*
 
 #envvars
 # export HADOOP_HOME=$OPT_PATH/hadoop-3.3.1
