--- a/hive/hive.env
+++ b/hive/hive.env
@@ -9,9 +9,9 @@ export PATH=$PATH:$HIVE_HOME/bin
 #     --hiveconf hive.server2.thrift.port=10000 \
 #     --hiveconf hive.root.logger=INFO,console \
 #     --hiveconf hive.server2.enable.doAs=false
-export HIVE_SITE_CONF_hive_server2_thrift_bind_host=0.0.0.0
-export HIVE_SITE_CONF_hive_server2_thrift_port=10000
-export HIVE_SITE_CONF_hive_metastore_event_db_notification_api_auth=false
+# export HIVE_SITE_CONF_hive_server2_thrift_bind_host=0.0.0.0
+# export HIVE_SITE_CONF_hive_server2_thrift_port=10000
+# export HIVE_SITE_CONF_hive_metastore_event_db_notification_api_auth=false
 
 
 #alias  -> mapred.job.queue.name=p_bigd_default
