--- a/spark/spark.env
+++ b/spark/spark.env
@@ -108,7 +108,7 @@ alias livy="kubectl --namespace livy port-forward livy-0 8998"
 # alias livy="kubectl --namespace spark port-forward livy-0 8998"
 
 #history
-alias history="kubectl --namespace spark port-forward historyserver-d87bf9fd9-4p8b8 18080"
+# alias history="kubectl --namespace spark port-forward historyserver-d87bf9fd9-4p8b8 18080"
 # alias history="kubectl --namespace spark port-forward historyserver 18080"
 # ====================================================== #docker ======================================================
 # alias spark="docker exec -it spark-master /bin/bash"
